<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FormUI</string>
    <string name="menu_language_english">English</string>
    <string name="menu_language_amharic">Amharic</string>
    <string name="personal_info">Personal Information</string>
    <string name="select_image_method">Choose image selection method</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="birth_date">Birth Date</string>
    <string name="select_date">Select Date</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="select_image">Select Image</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_language">Change Language</string>
    <string name="context_edit">Edit</string>
    <string name="context_delete">Delete</string>
    <string name="form_data_title">Form Data</string>
    <string name="education_level">Education Level</string>
    <string name="select_education">Select Education</string>
    <string name="high_school">High School</string>
    <string name="bachelor">Bachelor\'s Degree</string>
    <string name="master">Master\'s Degree</string>
    <string name="phd">PhD</string>
    <string name="terms_conditions">I agree to terms and conditions</string>
    <string name="error_full_name">Please enter your full name</string>
    <string name="error_email">Please enter your email</string>
    <string name="error_phone">Please enter your phone number</string>
    <string name="error_birth_date">Please select your birth date</string>
    <string name="error_gender">Please select your gender</string>
    <string name="error_terms">Please accept terms and conditions</string><string name="language">Language</string>
    <string name="english">English</string>
    <string name="amharic">Amharic</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
</resources>